--- a/static/design/css/custom.css
+++ b/static/design/css/custom.css
@@ -9,6 +9,155 @@ body{
     background-color: #191919;
 }
 
+.btn {
+    top: 0;
+    left: 0;
+    transition: all 0.15s linear 0s;
+    position: relative;
+    display: inline-block;
+    padding: 15px 25px;
+    text-transform: uppercase;
+    color: #404040;
+    letter-spacing: 1px;
+    box-shadow: -6px 6px 0 #404040;
+    text-decoration: none;
+}
+
+.btn-blue{
+    background-color: #037bfe;
+}
+
+.btn-darks{
+    background-color: #262626;
+    color: #a7a7a7;
+}
+
+.btn:hover {
+    top: 3px;
+    left: -3px;
+    box-shadow: -3px 3px 0 #404040;
+    background-color: #e34c3c;
+}
+.btn:hover::after {
+    top: 1px;
+    left: -2px;
+    width: 4px;
+    height: 4px;
+}
+.btn:hover::before {
+    bottom: -2px;
+    right: 1px;
+    width: 4px;
+    height: 4px;
+}
+.btn::after {
+    transition: all 0.15s linear 0s;
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: -4px;
+    width: 8px;
+    height: 8px;
+    background-color: #404040;
+    transform: rotate(45deg);
+    z-index: -1;
+}
+.btn::before {
+    transition: all 0.15s linear 0s;
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    right: 2px;
+    width: 8px;
+    height: 8px;
+    background-color: #404040;
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+a:active.btn {
+    top: 6px;
+    left: -6px;
+    box-shadow: none;
+}
+a:active.btn:before {
+    bottom: 1px;
+    right: 1px;
+}
+a:active.btn:after {
+    top: 1px;
+    left: 1px;
+}
+
+.center{
+    text-align: center;
+}
+
+#intro-title-main, #intro-title-sub, .title-container h2{
+    color: #ffe81f;
+    font-family: 'star-wars';
+    text-align: center;
+}
+
+nav ul{
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    height: 100%;
+    align-items: center;
+}
+
+nav img{
+    height: 100%;
+    width: 100px;
+    object-fit: cover;
+}
+
+nav{
+    height: 60px;
+    background-color: #424242;
+}
+
+nav a{
+    text-decoration: none;
+    padding: 21px 30px;
+}
+
+nav a.compare{
+    background-color: #262626;
+    color: #a7a7a7;
+}
+
+nav a.login-register{
+    background-color: #a7a7a7;
+    color: #000;
+}
+
+nav a:hover{
+    background-color: #e34c3c;
+    color: #000;
+}
+
+nav a.sw-logo{
+    padding: 0;
+}
+
+.m-left-auto{
+    margin-left: auto;
+}
+
+nav{
+    margin-bottom: 30px;
+}
+
+.title-container{
+    margin-bottom: 40px;
+}
+
+.flexbox{
+    display: flex;
+}
+
 /* INDEX.HTML */
 
 #intro .container{
@@ -21,11 +170,6 @@ body{
 
 #intro .title{
     text-align: center;
-}
-
-#intro-title-main, #intro-title-sub{
-    color: #ffe81f;
-    font-family: 'star-wars';
 }
 
 #intro-title-main{
@@ -66,84 +210,9 @@ canvas{
     position: relative; 
 }
 
-#copyright p{
+.copyright p{
     color: #a7a7a7;
     text-align: left;
-}
-
-.btn {
-    top: 0;
-    left: 0;
-    transition: all 0.15s linear 0s;
-    position: relative;
-    display: inline-block;
-    padding: 15px 25px;
-    text-transform: uppercase;
-    color: #404040;
-    letter-spacing: 1px;
-    box-shadow: -6px 6px 0 #404040;
-    text-decoration: none;
-}
-
-.btn-blue{
-    background-color: #037bfe;
-}
-.btn:hover {
-    top: 3px;
-    left: -3px;
-    box-shadow: -3px 3px 0 #404040;
-}
-.btn:hover::after {
-    top: 1px;
-    left: -2px;
-    width: 4px;
-    height: 4px;
-}
-.btn:hover::before {
-    bottom: -2px;
-    right: 1px;
-    width: 4px;
-    height: 4px;
-}
-.btn::after {
-    transition: all 0.15s linear 0s;
-    content: '';
-    position: absolute;
-    top: 2px;
-    left: -4px;
-    width: 8px;
-    height: 8px;
-    background-color: #404040;
-    transform: rotate(45deg);
-    z-index: -1;
-}
-.btn::before {
-    transition: all 0.15s linear 0s;
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    right: 2px;
-    width: 8px;
-    height: 8px;
-    background-color: #404040;
-    transform: rotate(45deg);
-    z-index: -1;
-}
-a.btn {
-    position: relative;
-}
-a:active.btn {
-    top: 6px;
-    left: -6px;
-    box-shadow: none;
-}
-a:active.btn:before {
-    bottom: 1px;
-    right: 1px;
-}
-a:active.btn:after {
-    top: 1px;
-    left: 1px;
 }
 
 #title{
