--- a/static/design/css/custom.css
+++ b/static/design/css/custom.css
@@ -114,7 +114,7 @@ nav img{
 }
 
 nav{
-    height: 60px;
+    height: 100%;
     background-color: #424242;
 }
 
@@ -148,6 +148,33 @@ nav a.sw-logo{
 
 nav{
     margin-bottom: 30px;
+}
+
+table{
+    width: 100%;
+}
+
+th{
+    padding: 20px 30px;
+    background-color: #424242;
+    color: #a7a7a7;
+}
+
+td{
+    padding: 7px 30px;
+}
+
+td{
+    color: #000;
+}
+
+tr{
+    background-color: #a7a7a7;
+}
+
+.red-row:hover{
+    background-color: #e34c3c;
+    color: #000;
 }
 
 .title-container{
@@ -220,3 +247,11 @@ canvas{
 }
 
 /* INDEX.HTML END */
+
+/* HOMEPAGE.HTML */
+
+#homepage table{
+    margin: 50px 0;
+}
+
+/* HOMEPAGE.HTML END */
