--- a/views/closing.ejs
+++ b/views/closing.ejs
@@ -1,3 +1,3 @@
-        <script src="/design/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="/design/bootstrap/bootstrap.bundle.min.js" type="application/javascript"></script>
     </body>
 </html>
