--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,7 +5,7 @@
     <ul class="flexbox">
         <%- include('logo') %>
         <li> 
-            <button id="compare-button" class="compare" href="compare.html">
+            <button id="compare-button" class="compare" href="#">
                 Compare
             </button>
         </li>
