--- a/views/addcomment.ejs
+++ b/views/addcomment.ejs
@@ -17,10 +17,10 @@
             <div class="col-12 center">
                 <div class="input-container">
                     
-                    <% if(typeof errorMessage !== 'undefined') { %>  
+                    <% if(typeof error.message !== 'undefined') { %>  
                         
                         <div class="error-message">
-                            <p class="cyan"><%= errorMessage %></p>
+                            <p class="cyan"><%= error.message %></p>
                         </div>
 
                     <% } %>
