--- a/views/error.ejs
+++ b/views/error.ejs
@@ -21,8 +21,8 @@
         <div class="row">
             <div class="col-12 center">
                 <h1>Whoops! Some error happened!</h1>
-                <h3>Error code: <%= errorCode %></h3>
-                <h4>Problem: <%= errorProblem %></h4>
+                <h3>Error code: <%= error.code %></h3>
+                <h4>Problem: <%= error.message %></h4>
             </div>
         </div>
     </div>
