--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,11 +33,11 @@
 
                     <form id="login-form" method="post" action="/login">
                         <div class="input-field">
-                            <input id="username" type="text" required>
+                            <input id="username" name="username" type="text" required>
                             <label for="username">Your username</label>
                         </div>
                         <div class="input-field">
-                            <input id="password" type="password" required>
+                            <input id="password" name="password" type="password" required>
                             <label for="password">Your password</label>
                         </div>
                         <div class="center">
