--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,19 +48,19 @@
 
                     <form id="register-form" method="post" enctype="multipart/form-data" action="/register">
                         <div class="input-field">
-                            <input id="username-reg" type="text" required >
+                            <input id="username-reg" name="username" type="text" required >
                             <label for="username-reg">Username</label>
                         </div>
                         <div class="input-field">
-                            <input id="email-reg" type="email" required >
+                            <input id="email-reg" name="email" type="email" required >
                             <label for="email-reg">E-mail</label>
                         </div>
                         <div class="input-field">
-                            <input id="password-reg" type="password" required >
+                            <input id="password-reg" name="password" type="password" required >
                             <label for="password-reg">Password</label>
                         </div>
                         <div class="input-field">
-                            <input id="password-again-reg" type="password" required >
+                            <input id="password-again-reg" name="passwordagain" type="password" required >
                             <label for="password-again-reg">Password again</label>
                         </div>
                         <div class="center">
