--- a/views/details.ejs
+++ b/views/details.ejs
@@ -152,7 +152,7 @@
                                 <a class="btn btn-darks" href="/comment/<%= spacecraft._id %>/<%= comment._id %>/edit">
                                     Edit
                                 </a>
-                                <a class="btn btn-darks" href="/comment/<%= spacecraft._id %>/<%= comment._id %>/delete">
+                                <a class="btn btn-darks" href="/comment/<%= comment._id %>/delete">
                                     Delete
                                 </a>
                             <% } %>
