--- a/views/addcomment.ejs
+++ b/views/addcomment.ejs
@@ -27,15 +27,15 @@
 
                     <form method="post" action="/comments/<%= spacecraft._id %>/new">
                         <div class="input-field">
-                            <input id="spacecraft-comment-title" required />
+                            <input id="spacecraft-comment-title" name="title" required value="<% typeof comment !== 'undefined' ? res.locals.comment.title : ''%>"/>
                             <label for="spacecraft-comment-title">Title of comment</label>
                         </div>
                         <div class="input-field">
-                            <input id="spacecraft-comment" required />
+                            <input id="spacecraft-comment" name="text" required value="<% typeof comment !== 'undefined' ? res.locals.comment.text : ''%>"/>
                             <label for="spacecraft-comment">Comment</label>
                         </div>
                         <div class="input-field">
-                            <input id="spacecraft-rating" type="number" required min="1" max="5"/>
+                            <input id="spacecraft-rating" name="rating" type="number" required min="1" max="5" value="<%= typeof comment !== 'undefined' ? res.locals.comment.rating : 1%>"/>
                             <label for="spacecraft-rating">Rating</label>
                         </div>
                         <div class="add-buttons flexbox">
