--- a/views/forgotpass.ejs
+++ b/views/forgotpass.ejs
@@ -28,7 +28,7 @@
 
                     <form id="forgot-form" method="post" action="/forgot">
                         <div class="input-field">
-                            <input id="forgot-email" type="email" required >
+                            <input id="forgot-email" name="email" type="email" required >
                             <label for="forgot-email">Registered e-mail address</label>
                         </div>
                         <div class="center">
